--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 .App-header {
@@ -20,4 +22,10 @@
 
 h4 {
   font-style: italic;
+}
+.feedback-box {
+  display: flex;
+}
+.feedback-button {
+  align-self: flex-end;
 }
